--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,5 +3,5 @@
   <repository path="..\checkmywwstats\packages.config" />
   <repository path="..\FennecViewer\packages.config" />
   <repository path="..\forum\packages.config" />
-  <repository path="..\werewolf\packages.config" />
+  <repository path="..\PogDbSqlite\packages.config" />
 </repositories>
