runs on windows.

--- a/FennecFox/FennecFox.csproj
+++ b/FennecFox/FennecFox.csproj
@@ -238,9 +238,17 @@
       <Project>{DF0D7868-C4C0-4388-BF11-138E1FC9BF87}</Project>
       <Name>Forum</Name>
     </ProjectReference>
+    <ProjectReference Include="..\PogDbSqlite\PogDbSqlite.csproj">
+      <Project>{F8D0D146-0D91-49E4-AEA1-24E5A1241F96}</Project>
+      <Name>PogDbSqlite</Name>
+    </ProjectReference>
     <ProjectReference Include="..\pogutils\pogutils.csproj">
       <Project>{D1549E8C-BAB5-4E3B-AE03-DC9895752D31}</Project>
       <Name>pogutils</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WerewolfTypes\WerewolfTypes.csproj">
+      <Project>{F60529CB-2D09-41BA-9EBA-700568E2ED6C}</Project>
+      <Name>WerewolfTypes</Name>
     </ProjectReference>
     <ProjectReference Include="..\werewolf\werewolf.csproj">
       <Project>{9082AFAD-DF54-4B4C-B274-FD399FA8D6E2}</Project>
