--- a/RickyRaccoon/RickyRaccoon.csproj
+++ b/RickyRaccoon/RickyRaccoon.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,7 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Object.cs" />
+    <Compile Include="RoleSet.cs" />
     <Compile Include="Raccoon.cs">
       <SubType>Form</SubType>
     </Compile>
