Save and Load role sets completed.

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="..\checkmywwstats\packages.config" />
   <repository path="..\FennecFox\packages.config" />
   <repository path="..\FennecViewer\packages.config" />
+  <repository path="..\RickyRaccoon\packages.config" />
 </repositories>
