--- a/werewolf/werewolf.csproj
+++ b/werewolf/werewolf.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,6 +55,8 @@
     </Compile>
     <Compile Include="AutoComplete.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoleSet.cs" />
+    <Compile Include="Team.cs" />
     <Compile Include="VoteCount.cs" />
     <Compile Include="Voter.cs" />
     <Compile Include="WerewolfModerator.cs" />
@@ -75,6 +78,12 @@
       <Project>{F60529CB-2D09-41BA-9EBA-700568E2ED6C}</Project>
       <Name>WerewolfTypes</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
