--- a/FennecFox/FennecFox.csproj
+++ b/FennecFox/FennecFox.csproj
@@ -151,6 +151,7 @@
     </Compile>
     <EmbeddedResource Include="AboutFennec.resx">
       <DependentUpon>AboutFennec.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="DayEditor.resx">
       <DependentUpon>DayEditor.cs</DependentUpon>
