--- a/TatianaTiger/TatianaTiger.csproj
+++ b/TatianaTiger/TatianaTiger.csproj
@@ -5,17 +5,15 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{30D87A83-74EE-4324-82C2-DB111A7C8735}</ProjectGuid>
+    <ProjectGuid>{169B41D0-A6BA-430A-B3A5-B60E80A0091D}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MaryMeerkat</RootNamespace>
-    <AssemblyName>MaryMeerkat</AssemblyName>
+    <RootNamespace>TatianaTiger</RootNamespace>
+    <AssemblyName>TatianaTiger</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -37,12 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>MaryMeerkat.ico</ApplicationIcon>
+    <ApplicationIcon>tiger.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.5.0.5\lib\net40\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -55,29 +50,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CorralData.cs" />
-    <Compile Include="CorralGunSuitType.cs" />
-    <Compile Include="FlashWindow.cs" />
-    <Compile Include="Gun.cs" />
+    <Compile Include="GameStarter.cs" />
     <Compile Include="Player.cs" />
-    <Compile Include="ShotResult.cs" />
-    <Compile Include="SubDialog.cs">
+    <Compile Include="Tatiana.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SubDialog.Designer.cs">
-      <DependentUpon>SubDialog.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Meerkat.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Meerkat.Designer.cs">
-      <DependentUpon>Meerkat.cs</DependentUpon>
+    <Compile Include="Tatiana.Designer.cs">
+      <DependentUpon>Tatiana.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Suit.cs" />
-    <EmbeddedResource Include="Meerkat.resx">
-      <DependentUpon>Meerkat.cs</DependentUpon>
+    <EmbeddedResource Include="Tatiana.resx">
+      <DependentUpon>Tatiana.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -89,11 +73,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="SubDialog.resx">
-      <DependentUpon>SubDialog.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="app.config" />
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -105,22 +85,39 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadata Include="Service References\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="MaryMeerkat.ico" />
-    <Content Include="redalert.wav">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\bugsbunny\bugsbunny.csproj">
-      <Project>{81BE69CF-37DB-4C03-AC6C-E0A5975E4A12}</Project>
-      <Name>bugsbunny</Name>
+    <ProjectReference Include="..\AutocompleteMenu\AutocompleteMenu.csproj">
+      <Project>{43CBC9AA-6A8E-463F-83A9-AFF3124AFDB6}</Project>
+      <Name>AutocompleteMenu</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ForumTypes\ForumTypes.csproj">
+      <Project>{3A512A72-44FC-458A-A6FB-36147D6C0CF6}</Project>
+      <Name>ForumTypes</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\forum\Forum.csproj">
+      <Project>{DF0D7868-C4C0-4388-BF11-138E1FC9BF87}</Project>
+      <Name>Forum</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PogDbSqlite\PogDbSqlite.csproj">
+      <Project>{F8D0D146-0D91-49E4-AEA1-24E5A1241F96}</Project>
+      <Name>PogDbSqlite</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\pogutils\pogutils.csproj">
+      <Project>{D1549E8C-BAB5-4E3B-AE03-DC9895752D31}</Project>
+      <Name>pogutils</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WerewolfTypes\WerewolfTypes.csproj">
+      <Project>{F60529CB-2D09-41BA-9EBA-700568E2ED6C}</Project>
+      <Name>WerewolfTypes</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\werewolf\werewolf.csproj">
+      <Project>{9082AFAD-DF54-4B4C-B274-FD399FA8D6E2}</Project>
+      <Name>werewolf</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="tiger.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
