--- a/WerewolfTypes/WerewolfTypes.csproj
+++ b/WerewolfTypes/WerewolfTypes.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="IPogDb.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vote.cs" />
     <Compile Include="VoterInfo.cs" />
   </ItemGroup>
   <ItemGroup>
