--- a/WerewolfTypes/WerewolfTypes.csproj
+++ b/WerewolfTypes/WerewolfTypes.csproj
@@ -48,11 +48,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vote.cs" />
     <Compile Include="VoterInfo.cs" />
+    <Compile Include="WerewolfGameState.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ForumTypes\ForumTypes.csproj">
       <Project>{3A512A72-44FC-458A-A6FB-36147D6C0CF6}</Project>
       <Name>ForumTypes</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\pogutils\pogutils.csproj">
+      <Project>{D1549E8C-BAB5-4E3B-AE03-DC9895752D31}</Project>
+      <Name>pogutils</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
