--- a/WerewolfTest/WerewolfTest.csproj
+++ b/WerewolfTest/WerewolfTest.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HTTPTest.cs" />
     <Compile Include="TestNameCorrection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
